<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGreyLight"
        tools:context=".Usuarios.RegistroActivity">

    <EditText
        android:id="@+id/idfecharegis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:ems="10"
        android:hint="@string/hintanio"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idsurname2regis" />

    <EditText
        android:id="@+id/idsurname1reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:ems="10"
        android:hint="@string/hintAp1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idnomreg" />

    <EditText
        android:id="@+id/idnomreg"
        android:layout_width="222dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:ems="10"
        android:hint="@string/hintsNombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_RegistrotoMain"
        android:layout_width="101dp"
        android:layout_height="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="104dp"
        android:background="@color/colorPurpleDark"
        android:onClick="IniciarMainActivity"
        android:text="Volver"
        android:textColor="@color/colorGreyLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/idbotregis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idnumeroregis"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/idbotregis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="104dp"
        android:background="@color/colorPurpleDark"
        android:text="@string/regisbot"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toEndOf="@+id/btn_RegistrotoMain"
        app:layout_constraintTop_toBottomOf="@+id/idnumeroregis"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/idsurname2regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:ems="10"
        android:hint="@string/hintAp2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idsurname1reg" />

    <EditText
        android:id="@+id/idpatioregis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:ems="10"
        android:hint="@string/hintpatio"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idfecharegis" />

    <EditText
        android:id="@+id/idpabellonregis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:ems="10"
        android:hint="@string/hintpab"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idpatioregis" />

    <EditText
        android:id="@+id/idfilaregis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:ems="10"
        android:hint="@string/hintfila"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idpabellonregis" />

    <EditText
        android:id="@+id/idnumeroregis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:ems="10"
        android:hint="@string/hintNumero"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idfilaregis" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:text="@string/regiseti"
        android:textColor="@color/colorPurpleDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>